# commit

./: README.md
commit/: .env.example  .gitignore  CLAUDE.md  README.md  next.config.ts  package-lock.json  package.json  skills-lock.json  tsconfig.json
commit/anchor/: Anchor.toml  package.json  tsconfig.json
commit/anchor/programs/commit/: Cargo.toml
commit/anchor/programs/commit/src/: errors.rs  lib.rs  utils.rs
commit/anchor/programs/commit/src/instructions/: cancel_streak.rs  claim_reward.rs  create_streak.rs  dispute_checkin.rs  expire_dispute.rs  finalize_checkin.rs  join_streak.rs  mod.rs  resolve_dispute.rs  slash_missed.rs  submit_checkin_with_attestation.rs  withdraw_failed.rs
commit/anchor/programs/commit/src/state/: checkin_attestation.rs  mod.rs  participant.rs  phash_registry.rs  streak.rs  streak_proof.rs
commit/anchor/scripts/: finalize-checkin.ts  gen-verifier-keypair.js
commit/anchor/tests/: commit.ts
commit/app/: globals.css  layout.tsx  page.tsx
commit/app/components/: AttestationCard.tsx  DisputeButton.tsx  GitHubVerifier.tsx  HabitTypeSelector.tsx  HeroStats.tsx  Leaderboard.tsx  LiveStreaks.tsx  Navbar.tsx  PhotoVerifier.tsx  RewardPool.tsx  SoulboundNftCard.tsx  StakeHealthPanel.tsx  StakeWidget.tsx  StreakCard.tsx  X402PaymentModal.tsx  providers.tsx
commit/app/dashboard/: page.tsx
commit/app/lib/: attestation.ts  constants.ts  errors.ts  habits.ts  lifi.ts  mock-data.ts  moonshot.ts  phash.ts  privy-utils.ts  program.ts  sanitize.ts  solana.ts  types.ts  use-chain-data.ts  use-solana-tx.ts  wallet-context.tsx  x402-client.ts  (+1 more)
(+10 files in other folders)
